[project]
name = "pdf2md4llm"
version = "0.2.0"
description = "Convert PDFs to LLM-friendly Markdown."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm>=0.0.17",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.uv]
package = false
